--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "babel-plugin-recharts": "^1.1.0",
+        "bootstrap": "^3.3.7",
+        "create-react-class": "^15.6.0",
         "d3": "^4.10.0",
         "install": "^0.10.1",
         "npm": "^5.3.0",
+        "prop-types": "^15.5.10",
         "react": "^15.6.1",
+        "react-bootstrap-table": "^4.0.2",
         "react-dom": "^15.6.1",
-        "react-easy-chart": "^0.1.13",
         "react-faux-dom": "^4.0.3",
         "react-file-reader": "^1.1.1",
-        "react-linechart": "^1.1.12",
+        "react-native-web": "necolas/react-native-web",
         "react-router": "^4.2.0",
         "react-scripts": "1.0.12",
+        "recharts": "^1.0.0-alpha.4",
         "superagent": "^3.6.0"
     },
     "scripts": {
