--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "create-react-class": "^15.6.0",
         "d3": "^4.10.0",
         "install": "^0.10.1",
+        "moment": "^2.18.1",
         "npm": "^5.3.0",
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
