--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-bootstrap-table": "^4.0.2",
+        "react-datepicker": "^0.54.0",
         "react-dom": "^15.6.1",
         "react-faux-dom": "^4.0.3",
         "react-file-reader": "^1.1.1",
@@ -27,6 +28,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
-        "deploy": "yarn run build && surge -p build -d diabetus.surge.sh"
+        "deploy": "yarn run build && surge -p build -d diabetus.surge.sh && react-scripts start "
     }
 }
