--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
         "npm": "^5.3.0",
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
+        "react-bootstrap": "^0.31.3",
+        "react-bootstrap-daterangepicker": "^3.4.1",
         "react-bootstrap-table": "^4.0.2",
-        "react-datepicker": "^0.54.0",
         "react-dom": "^15.6.1",
         "react-faux-dom": "^4.0.3",
         "react-file-reader": "^1.1.1",
