--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "diabetus",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://MrRobot245.github.io/reactapp",
     "dependencies": {
         "babel-plugin-recharts": "^1.1.0",
         "bootstrap": "^3.3.7",
         "create-react-class": "^15.6.0",
         "d3": "^4.10.0",
+        "gh-pages": "^1.0.0",
         "install": "^0.10.1",
         "moment": "^2.18.1",
         "npm": "^5.3.0",
@@ -29,6 +31,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
-        "deploy": "yarn run build && surge -p build -d diabetus.surge.sh && react-scripts start "
+        "deploy": "react-scripts build && gh-pages -d build"
     }
 }
